k8s_exam/my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8080

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress
# spec:
#   defaultBackend:
#     service:
#       name: fastapi-service
#       port:
#         number: 8080
